ViTables ChangeLog
==================
** December 09 2024 **
Fixed ruff errors PLR5501, RUF010, UP015, UP020 and RUF022.

** December 07 2024 **
Fixed a couple of crashes due to compatibility problems between PyQt/PySide.

Fixed ruff errors E741, F401, E714, E713, E712 and E402.

pyproject.toml has been updated.

Fixed ruff errors UP032 and UP009.

Fixed ruff import errors I001.

Fixed ruff errors W293, PLR1730, PLR0402, UP004, W291, B009, UP024 and PLW1510.

** December 06 2024 **
Fixed some compatibility problems between PyQt5, PyQt6 and PySide6.

** December 03 2024 **
pyproject.toml updated in order to include numpy >=2 as a dependency.

Several regular expressions changed to avoid SyntaxWarning messages.

** August 19 2023 **
Fixed a bug in module test_start.py.

VERSION file removed because it is unneeded.

** August 16 2023 **
Fixed a bug in module vtapp.py.

Removed plugins section from pyproject.toml.

** August 04, 2023 **
Users Guide and README.md updated.

pyproject.toml updated in order to package the users guide too.

** August 02, 2023 **
Updated the script that generates the users guide.

Users Guide updated.

** July 31, 2023 **
Package build system changed from setuptools to flit.

** July 30, 2023 **
setup.py and setup.cfg files changed to use the new README.md file.

** July 28, 2023 **
Implementation of extensions has been simplified.

** July 23, 2023 **
Implementation of extensions has been refactored.

** July 21, 2023 **
Plugins moved to extensions and implemented from scratch.

** July 20, 2023 **
Support PyQt6, this is useful for mac users who cant install
PyQt5.

** January 03, 2019 **
Added script to automatically generate the Users Guide.

** December 31, 2019 **
setup.py slightly improved.

** December 25, 2019 **
Fixed the Xmas day bug in vtapp.py.

Fixed a syntax error in the setup.py description that caused PyPI to refuse
the package upload.

** December 24, 2019 **
Release 3.0.1 is ready to be published.

** December 23, 2019 **